- Fix bug in operation of Edit Protocol button on Devices tab (Graham)
- Add radio buttons to Timing Summary to allow choice of raw and analyzed timings (Graham)
- Add further features to Timing Summary, including conversion of burst pairs to user-specified code strings (Graham)
-- Private build 4
- Debugging and improvements to Learned Signal analysis and timing summary (Graham)

Changes for v2.04
-- Private build 1
- Add new checksum class, Xor16Checksum, and new RDF syntax for it (Graham)
- Add new entry DeviceSelection and update syntax for SoftDev and PunchThru in RDF [General] section (Graham)
- Update syntax for RDF [DeviceButtons] section to allow PunchThru bytes to be specified when PunchThru=none (Graham)
- Update version to v2.04 build 1 (Graham)
- Fix a few minor bugs (Graham)
- Update digitmaps.bin to 644 (Dave Reed, Graham)
- Update jp12serial to v0.21 instead of v0.20 to support JP1.4N (Graham)
-- Private build 2
- Modify syntax for RDF [DeviceButtons] section to allow default PunchThru bytes to be specified for all settings of PunchThru in [General] section (Graham)
-- Private builds 3, 4
- Fix minor bugs in build 2
-- Private build 5
- Added support for a multi-line Notes field in the [General] section of the RDF (Graham)
- Added support for [Settings] entries for segmented remotes for bits from any segment type (Graham)
-- Private build 6
- Fix bug causing error when two device upgrades are present with same PID, different protocols, and no code for relevant processor in protocols.ini (Graham)
- Add support for new [General+] section in RDF which can supplement [General] section; new Notes field should be put in this section (Graham)
- Allow second parameter, modulus (default 2), in ForceEvenStarts entry of RDF [General] section; this is a digit and segment lengths must be 0 modulus this value (Graham)
- Add new processor, TI2541, with interface type JP3.1, ForceEvenStarts modulus defaulting to 4 and learned signal format = 1 (Graham)