@@ -15,6 +15,10 @@ Changes for v2.05
 - Add further features to Timing Summary, including conversion of burst pairs to user-specified code strings (Graham)
 -- Private build 4
 - Debugging and improvements to Learned Signal analysis and timing summary (Graham)
+-- Private build 5
+- Further improvements to Learned Signal analysis and timing summary (Graham)
+- Add Delete All button to RMTablePanel and activate it for Learned Signal Panel (Graham)
+- Add new option "Same sig = same remote" in Options > Advanced, preventing need to choose RDF when repeatedly downloading same remote (Graham)
 
 Changes for v2.04
 -- Private build 1
